--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar mode="md">
     <ion-title color="dark">
       <span>Home</span>
       <ion-icon name="chevron-down-outline" color="dark"></ion-icon>
@@ -8,51 +8,22 @@
 </ion-header>
 
 <ion-content>
+  <div *ngIf="isLoading"><ion-skeleton-text animated style="height: 25vh;"></ion-skeleton-text></div>
+  <app-loading-restaurant *ngIf="isLoading"></app-loading-restaurant>
 
-  <div class="borderBottom">
-    <ion-slides pager="true" [options]="slideOptions">
-      <ion-slide>
-        <div [ngStyle]="{'background-image':'url(' + 'assets/imgs/1.jpg' + ')'}"></div>
-      </ion-slide>
+  <app-banner *ngIf="!isLoading" [bannerImages]="banners"></app-banner>
 
-      <ion-slide>
-        <div [ngStyle]="{'background-image':'url(' + 'assets/imgs/2.jpg' + ')'}"></div>
-      </ion-slide>
-
-      <ion-slide>
-        <div [ngStyle]="{'background-image':'url(' + 'assets/imgs/3.jpg' + ')'}"></div>
-      </ion-slide>
-    </ion-slides>
-  </div>
-
-  <ion-list>
+  <ion-list *ngIf="!isLoading">
     <ion-list-header class="ion-margin-bottom">
       <ion-label>
         <h4>Restaurants Nearby</h4>
         <p>Discover unique tastes near you</p>
       </ion-label>
     </ion-list-header>
-    <ion-item lines="none">
-      <ion-thumbnail slot = "start">
-        <img src="assets/imgs/1.jpg"/>
-      </ion-thumbnail>
-      <ion-label>
-        <h4>Stayfit</h4>
-        <ion-text color="medium">
-          <p class="pStyle">Italian, Mexican</p>
-        </ion-text>
-        <span>
-          <ion-icon name="star"></ion-icon>
-          5 .
-        </span>
-        25 mins. R100 for two
-        <ion-text color="tertiary">
-          <p class="distance">
-            2.59 kms away
-          </p>
-        </ion-text>
-      </ion-label>
-    </ion-item>
+
+    <ion-item-group *ngIf="restaurants?.length > 0">
+      <app-restaurant *ngFor="let restaurant of restaurants" [restaurant]="restaurant"></app-restaurant>
+    </ion-item-group>
   </ion-list>
 
 </ion-content>
