--- a/src/app/pages/tabs/search/search.page.html
+++ b/src/app/pages/tabs/search/search.page.html
@@ -1,9 +1,24 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>search</ion-title>
-  </ion-toolbar>
+    <ion-searchbar
+    animated="true"
+    debounce="800"
+    #searchInput
+    (ionChange)="onSearchChange($event)">
+  </ion-searchbar>
+
+</ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <app-loading-restaurant *ngIf="isLoading"></app-loading-restaurant>
+  <ion-list>
+    <ion-list-header>
+      <ion-label>
+        <h4>Search results for"{{query}}"</h4>
+      </ion-label>
+    </ion-list-header>
+    <app-restaurant *ngFor="let restaurant of restaurants"
+    [restaurant]="restaurant"></app-restaurant>
+  </ion-list>
 </ion-content>
