--- a/src/app/pages/tabs/search/search.page.html
+++ b/src/app/pages/tabs/search/search.page.html
@@ -11,8 +11,11 @@
 </ion-header>
 
 <ion-content>
+
   <app-loading-restaurant *ngIf="isLoading"></app-loading-restaurant>
-  <ion-list>
+
+  <app-empty-screen *ngIf= "!isLoading && (restaurants?.length === 0 || query?.length === 0)" [model]="model"></app-empty-screen>
+  <ion-list *ngIf="!isLoading && restaurants.length > 0">
     <ion-list-header>
       <ion-label>
         <h4>Search results for"{{query}}"</h4>
@@ -21,4 +24,5 @@
     <app-restaurant *ngFor="let restaurant of restaurants"
     [restaurant]="restaurant"></app-restaurant>
   </ion-list>
+
 </ion-content>
