--- a/src/app/pages/tabs/search/search.page.html
+++ b/src/app/pages/tabs/search/search.page.html
@@ -21,8 +21,11 @@
         <h4>Search results for"{{query}}"</h4>
       </ion-label>
     </ion-list-header>
-    <app-restaurant *ngFor="let restaurant of restaurants"
-    [restaurant]="restaurant"></app-restaurant>
+    <app-restaurant
+      *ngFor="let restaurant of restaurants"
+      [restaurant]="restaurant"
+      [routerLink]="['/', 'tabs', 'restaurants', restaurant.uid]">
+    </app-restaurant>
   </ion-list>
 
 </ion-content>
