--- a/src/app/pages/tabs/items/items.page.html
+++ b/src/app/pages/tabs/items/items.page.html
@@ -77,17 +77,17 @@
         <ion-label>
           <h4>{{item?.name}}</h4>
           <p class="ion-text-wrap">{{item?.desc}}</p>
-          <ion-text><p>R {{item?.price}}</p></ion-text>
+          <ion-text><p>R {{item?.price | number: '0.2-2'}}</p></ion-text>
         </ion-label>
 
-        <!-- <ion-row>
+        <ion-row *ngIf="!item?.quantity || item?.quantity <= 0" (click)="quantityPlus(item, i)">
           <ion-text class="ion-padding-horizontal" color="success">Add</ion-text>
-        </ion-row> -->
+        </ion-row>
 
-        <ion-row>
-          <ion-icon color="danger" name="remove-outline"></ion-icon>
-          <ion-text class="ion-text-center quantity" color="dark">1</ion-text>
-          <ion-icon color="success" name="add-outline"></ion-icon>
+        <ion-row *ngIf="item?.quantity > 0">
+          <ion-icon color="danger" name="remove-outline" (click)="quantityMinus(item, i)"></ion-icon>
+          <ion-text class="ion-text-center quantity" color="dark">{{item?.quantity}}</ion-text>
+          <ion-icon color="success" name="add-outline" (click)="quantityPlus(item, i)"></ion-icon>
         </ion-row>
       </ion-item>
     </ng-container>
@@ -95,15 +95,15 @@
   </ion-list>
 </ion-content>
 
-<ion-footer>
+<ion-footer *ngIf="cartData?.totalItem > 0">
   <ion-toolbar color="success">
     <ion-label color="dark">
-      <h4>1 Item | R 40.00</h4>
+      <h4>{{cartData?.totalItem}} Item <span *ngIf="cartData?.totalItem > 1">s</span> | R {{cartData?.totalPrice}}</h4>
       <ion-text color="light">
         <p>Extra charges may apply</p>
       </ion-text>
     </ion-label>
-    <ion-button slot="end" fill="clear" color="dark">
+    <ion-button slot="end" fill="clear" color="dark" (click)="viewCart()">
       <ion-icon slot="end" name="basket-outline"></ion-icon>
       VIEW CART
     </ion-button>
