--- a/src/app/pages/tabs/items/items.page.scss
+++ b/src/app/pages/tabs/items/items.page.scss
@@ -1,34 +1,5 @@
-h1 {
-  font: bold;
-  font-size: 1.2rem;
-}
-
-.dashedBorderBottom {
-  border-bottom: 1px dashed var(--ion-color-medium);
-  padding-bottom: 1vh;
-  margin-bottom: 1vh;
-}
-
 .veg {
   align-items: center;
-}
-
-ion-item {
-  ion-thumbnail {
-    height: 10vh;
-    width: 20vw;
-    img {
-      border-radius: 10px;
-      height: 100%;
-      width: 100%;
-    }
-  }
-
-  ion-row {
-    border: 1px solid var(--ion-color-medium);
-    border-radius: 10px;
-    padding: 0.3rem;
-  }
 }
 
 ion-list-header {
@@ -37,16 +8,12 @@ ion-list-header {
   letter-spacing: 0.5px;
 }
 
-.quantity {
-  width: 2rem;
-}
-
-ion-text {
-  font-size: 0.8rem;
-  p {
-    margin-top: 0.2rem;
-  }
-}
+// ion-text {
+//   font-size: 0.8rem;
+//   p {
+//     margin-top: 0.2rem;
+//   }
+// }
 
 ion-footer {
   h4, p {
