--- a/src/app/pages/tabs/cart/cart.page.html
+++ b/src/app/pages/tabs/cart/cart.page.html
@@ -8,69 +8,72 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="none" class="borderBottomSmall">
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <ion-img [src]="model?.restaurant?.cover? model.restaurant.cover : 'assets/imgs/1.jpg'"></ion-img>
-      </ion-thumbnail>
-      <ion-label>
-        <ion-text><h4>{{model?.restaurant?.name}}</h4></ion-text>
-        <ion-note>{{model?.restaurant?.address}}</ion-note>
-      </ion-label>
+  <ng-container *ngIf="model?.restaurant">
+    <ion-list lines="none" class="borderBottomSmall">
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-img [src]="model?.restaurant?.cover? model.restaurant.cover : 'assets/imgs/1.jpg'"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text><h4>{{model?.restaurant?.name}}</h4></ion-text>
+          <ion-note>{{model?.restaurant?.address}}</ion-note>
+        </ion-label>
+      </ion-item>
+
+      <ion-item *ngFor="let item of model?.items; let i = index">
+        <ion-text color="success">
+          <span class="dotStyle">&#9679;</span>
+        </ion-text>
+
+        <ion-label class="ion-text-wrap">
+          <h5>{{item?.name}}</h5>
+        </ion-label>
+
+        <ion-row>
+          <ion-icon color="dark" name="remove-outline" (click)="quantityMinus(i)"></ion-icon>
+          <ion-text class="ion-text-center quantity" color="dark">{{item?.quantity}}</ion-text>
+          <ion-icon color="success" name="add-outline" (click)="quantityPlus(i)"></ion-icon>
+        </ion-row>
+
+        <ion-text slot="end" color="dark" class="price ion-text-right">
+          <!-- <h6>R {{item?.price * item?.quantity}}</h6> -->
+          R {{(item?.price * item?.quantity) | number: '0.2-2'}}
+        </ion-text>
+      </ion-item>
+    </ion-list>
+
+    <ion-item lines="none" class="borderBottom">
+      <ion-icon slot="start" name="list-outline"></ion-icon>
+      <ion-input type="text" placeholder="Allergies/Any Instructions? Type here" [(ngModel)]="instruction"></ion-input>
     </ion-item>
 
-    <ion-item *ngFor="let item of model?.items; let i = index">
-      <ion-text color="success">
-        <span class="dotStyle">&#9679;</span>
-      </ion-text>
+    <ion-list class="borderBottom">
+      <ion-list-header>
+        <ion-label color="tertiary">Bill Details</ion-label>
+      </ion-list-header>
 
-      <ion-label class="ion-text-wrap">
-        <h5>{{item?.name}}</h5>
-      </ion-label>
+      <ion-item lines="none">
+        <ion-label color="dark">Item Total</ion-label>
+        <ion-text slot="end" color="dark">R {{model?.totalPrice}}</ion-text>
+      </ion-item>
 
-      <ion-row>
-        <ion-icon color="dark" name="remove-outline" (click)="quantityMinus(i)"></ion-icon>
-        <ion-text class="ion-text-center quantity" color="dark">{{item?.quantity}}</ion-text>
-        <ion-icon color="success" name="add-outline" (click)="quantityPlus(i)"></ion-icon>
-      </ion-row>
+      <ion-item lines="full">
+        <ion-label color="dark">Delivery Fee</ion-label>
+        <ion-text slot="end" color="dark">R {{model?.deliveryCharge}}</ion-text>
+      </ion-item>
 
-      <ion-text slot="end" color="dark" class="price ion-text-right">
-        <!-- <h6>R {{item?.price * item?.quantity}}</h6> -->
-        R {{item?.price * item?.quantity}}
-      </ion-text>
-    </ion-item>
-  </ion-list>
+      <ion-item lines="none">
+        <ion-label color="dark">To Pay</ion-label>
+        <ion-text slot="end" color="dark"><h5>R {{model?.grandTotal}}</h5></ion-text>
+      </ion-item>
+    </ion-list>
 
-  <ion-item lines="none" class="borderBottom">
-    <ion-icon slot="start" name="list-outline"></ion-icon>
-    <ion-input type="text" placeholder="Allergies/Any Instructions? Type here" [(ngModel)]="instruction"></ion-input>
-  </ion-item>
-
-  <ion-list class="borderBottom">
-    <ion-list-header>
-      <ion-label color="tertiary">Bill Details</ion-label>
-    </ion-list-header>
-
-    <ion-item lines="none">
-      <ion-label color="dark">Item Total</ion-label>
-      <ion-text slot="end" color="dark">R {{model?.totalPrice}}</ion-text>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label color="dark">Delivery Fee</ion-label>
-      <ion-text slot="end" color="dark">R {{model?.deliveryCharge}}</ion-text>
-    </ion-item>
-
-    <ion-item lines="none">
-      <ion-label color="dark">To Pay</ion-label>
-      <ion-text slot="end" color="dark"><h5>R {{model?.grandTotal}}</h5></ion-text>
-    </ion-item>
-  </ion-list>
+  </ng-container>
 </ion-content>
 
-<ion-footer>
+<ion-footer *ngIf="model?.restaurant">
   <ion-toolbar>
-    <!-- <ion-row>
+    <ion-row *ngIf="!location?.lat">
       <ion-col size="6">
         <ion-button expand="block" size="small" fill="outline" color="success" (click)="addAddress()">
           Add Address
@@ -82,9 +85,9 @@
           Change Address
         </ion-button>
       </ion-col>
-    </ion-row> -->
+    </ion-row>
 
-    <ion-item lines="none">
+    <ion-item lines="none" *ngIf="location?.lat">
       <ion-button slot="end" size="small" fill="clear" (click)="changeAddress()">CHANGE</ion-button>
       <ion-icon slot="start" name="home-outline"></ion-icon>
       <ion-label>
@@ -93,8 +96,8 @@
       </ion-label>
     </ion-item>
 
-    <ion-row>
-      <ion-col size="6" class="ion-no-padding">
+    <ion-row *ngIf="location?.lat">
+      <ion-col size="6" class="ion-no-padding" (click)="scrollToBottom()">
         <ion-item lines="none" color="light" class="ion-no-padding">
           <ion-label>
             <h6>R {{model?.grandTotal}}</h6>
