--- a/src/app/components/restaurant-detail/restaurant-detail.component.scss
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.scss
@@ -1,5 +1,5 @@
 .dashedBorderBottom {
-  border-bottom: 1px dashed var(--ion-color-medium);
+  //border-bottom: 1px dashed var(--ion-color-medium);
   padding-bottom: 1vh;
   margin-bottom: 1vh;
 }
